--- a/package.json
+++ b/package.json
@@ -59,12 +59,12 @@
   },
   "devDependencies": {
     "@iconify/react": "^5.2.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "20.19.9",
+    "@types/react": "19.1.9",
     "@types/react-dom": "^19",
     "@types/react-flatpickr": "^3.8.11",
     "prettier": "^3.4.2",
     "sass": "1.77.6",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 }
