--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gridjs-react": "^6.1.1",
     "jsvectormap": "1.3.2",
     "leaflet": "^1.9.4",
+    "list": "^2.0.19",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
     "next": "^15.4.4",
@@ -44,6 +45,7 @@
     "react-dropzone": "^14.3.5",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-quill-new": "^3.3.3",
     "react-select": "^5.10.0",
