--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "google-maps-react": "^2.0.6",
     "gridjs": "^6.2.0",
     "gridjs-react": "^6.1.1",
+    "jsqr": "^1.4.0",
     "jsvectormap": "1.3.2",
     "leaflet": "^1.9.4",
     "list": "^2.0.19",
