--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'"
+    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'",
+    "export": "next build"
   },
   "dependencies": {
     "@fullcalendar/bootstrap": "^6.1.15",
@@ -30,6 +31,7 @@
     "gridjs": "^6.2.0",
     "gridjs-react": "^6.1.1",
     "html5-qrcode": "^2.3.8",
+    "jsqr": "^1.4.0",
     "jsvectormap": "1.3.2",
     "leaflet": "^1.9.4",
     "list": "^2.0.19",
