--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@hookform/resolvers": "^3.10.0",
     "@react-google-maps/api": "^2.20.5",
     "@smastrom/react-rating": "^1.5.0",
+    "@types/axios": "^0.9.36",
     "apexcharts": "^4.4.0",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.3",
     "bun": "^1.2.2",
     "choices.js": "^11.0.3",
