Menu and some other changes

--- a/.env.development
+++ b/.env.development
@@ -39,7 +39,9 @@ NEXT_PUBLIC_HEALTH_URL=http://localhost:3001/health
 NEXT_PUBLIC_ASSET_HEALTH_URL=http://localhost:3003/health
 
 # Environment
-NODE_ENV=development
+NODE_ENV=developemt
+
+NEXT_PUBLIC_APP_ENV=developemt
 
 # =============================================================================
 # OPTIONAL CONFIGURATION
