--- a/.env.development
+++ b/.env.development
@@ -29,10 +29,10 @@
 
 API Configuration - Development (Local)
 Consumer Portal Backend
-NEXT_PUBLIC_API_URL=http://localhost:3001/api/v1
+NEXT_PUBLIC_API_URL=https://api.assetnix.com/api/v1
 
 # Molecule Asset Service
-NEXT_PUBLIC_ASSET_API_URL=http://localhost:3003/api/v1
+NEXT_PUBLIC_ASSET_API_URL=https://api.assetnix.com/api/v1
 
 # Health Check URLs - Development
 NEXT_PUBLIC_HEALTH_URL=http://localhost:3001/health
